--- a/package.json
+++ b/package.json
@@ -6,24 +6,8 @@
     "start": "next start"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
-    "@nomicfoundation/hardhat-ethers": "^3.0.6",
-    "@nomicfoundation/hardhat-ignition": "^0.15.5",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.8",
-    "@nomicfoundation/ignition-core": "^0.15.5",
-    "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
-    "@types/chai": "^4.3.16",
-    "@types/mocha": "^10.0.7",
-    "chai": "^4.4.1",
-    "hardhat": "^2.22.6",
-    "hardhat-gas-reporter": "^1.0.10",
-    "solidity-coverage": "^0.8.12",
-    "ts-node": "^10.9.2",
-    "typechain": "^8.3.2"
+    "hardhat": "^2.22.6"
   },
   "dependencies": {
     "ethers": "5.7.2",
