--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
-    "ethers": "5.7.2",
+    "ethers": "^6.13.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
