--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+ignition/deployments/chain-11155111
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
