--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
